--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
                 <div class="container">
                     <div class="swiper BurderSwiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide" style="background-image: url(assets/images/b.jpg) ">
-                            </div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/k.jpg) "></div>
+                            <div class="swiper-slide" style="background-image: url(assets/images/b.jpg) "></div>
                             <div class="swiper-slide" style="background-image: url(assets/images/ff.jpg) "></div>
                             <div class="swiper-slide" style="background-image: url(assets/images/f.jpg) "> </div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/s.jpg) "> </div>
                             <div class="swiper-slide" style="background-image: url(assets/images/o.jpg) "></div>
                             <!-- <div class="swiper-slide" style="background-image: url(assets/images/d.jpg) "></div> -->
                             <!-- <div class="swiper-slide">Slide 6</div>
