--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                             <div class="swiper-slide" style="background-image: url(assets/images/ff.jpg) "></div>
                             <div class="swiper-slide" style="background-image: url(assets/images/f.jpg) "> </div>
                             <div class="swiper-slide" style="background-image: url(assets/images/o.jpg) "></div>
-                            <!-- <div class="swiper-slide" style="background-image: url(assets/images/d.jpg) "></div> -->
-                            <!-- <div class="swiper-slide">Slide 6</div>
+                            <div class="swiper-slide" style="background-image: url(assets/images/fr.jpg) "></div>
+                            <div class="swiper-slide" style="background-image: url(assets/images/s.jpg) "></div>                             <!-- <div class="swiper-slide">Slide 6</div>
                             <div class="swiper-slide">Slide 7</div>
                             <div class="swiper-slide">Slide 8</div>
                             <div class="swiper-slide">Slide 9</div> -->
