--- a/index.html
+++ b/index.html
@@ -18,12 +18,24 @@
                 <div class="container">
                     <div class="swiper BurderSwiper">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide" style="background-image: url(assets/images/b.jpg) "></div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/ff.jpg) "></div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/f.jpg) "> </div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/o.jpg) "></div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/fr.jpg) "></div>
-                            <div class="swiper-slide" style="background-image: url(assets/images/s.jpg) "></div>                             <!-- <div class="swiper-slide">Slide 6</div>
+                            <div class="swiper-slide">
+                                <img src="assets/images/b.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/images/ff.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide"> 
+                                <img src="assets/images/f.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/images/o.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/images/fr.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="assets/images/s.jpg" alt="">
+                            </div>                             <!-- <div class="swiper-slide">Slide 6</div>
                             <div class="swiper-slide">Slide 7</div>
                             <div class="swiper-slide">Slide 8</div>
                             <div class="swiper-slide">Slide 9</div> -->
